# streamlit_app_development

./: LICENSE  README.md  myapp.py  myapp.py~  pyproject.toml  settings.py
admin/: admin_1.py
