[tool.poetry]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = ["Prince C"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pandas = "^2.2.2"
keras = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
